--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
+fastapi = "^0.111.0"
+pydantic = "^2.7.1"
 
 [build-system]
 requires = ["poetry-core"]
