--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ package-mode = false
 python = "^3.12"
 fastapi = "^0.111.0"
 pydantic = "^2.7.1"
+supabase = "^2.4.5"
+shortuuid = "^1.0.13"
 
 [build-system]
 requires = ["poetry-core"]
